--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
                             <i class="bi bi-moon-fill"></i>
                         </button>
                     </li>
-                    <li class="nav-item">
+                    <!-- Language selector hidden for now -->
+                    <!-- <li class="nav-item">
                         <select class="form-select form-select-sm language-selector" id="languageSelector">
                             <option value="pt-BR">PT-BR</option>
                             <option value="en-US">EN-US</option>
                         </select>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
