--- a/index.html
+++ b/index.html
@@ -35,11 +35,12 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#contact" data-translate="nav.contact">Contato</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- Theme toggle hidden for now -->
+                    <!-- <li class="nav-item">
                         <button class="btn btn-link nav-link" id="themeToggle" title="Toggle theme">
                             <i class="bi bi-moon-fill"></i>
                         </button>
-                    </li>
+                    </li> -->
                     <!-- Language selector hidden for now -->
                     <!-- <li class="nav-item">
                         <select class="form-select form-select-sm language-selector" id="languageSelector">
@@ -202,8 +203,8 @@
                                 <i class="bi bi-telephone"></i>
                             </div>
                             <div>
-                                <h5 data-translate="contact.phone">Telefone</h5>
-                                <p>(21) 91243-3246</p>
+                                <h5 data-translate="contact.phone">Telefone (WhatsApp)</h5>
+                                <p>(21) 3272-2636</p>
                             </div>
                         </div>
 
@@ -213,7 +214,7 @@
                             </div>
                             <div>
                                 <h5>Email</h5>
-                                <p>[email protected]</p>
+                                <p>xavier@xavierdev.com.br</p>
                             </div>
                         </div>
 
@@ -224,10 +225,10 @@
                             <div>
                                 <h5 data-translate="contact.address">Endereço</h5>
                                 <p>
-                                    Rua Piauí, 77 - Apt 406, Bloco 2<br>
+                                    Rua São Brás, 68 - B2 - 304<br>
                                     Todos Os Santos<br>
                                     Rio de Janeiro - RJ<br>
-                                    CEP: 20.770-130
+                                    CEP: 20.770-150
                                 </p>
                             </div>
                         </div>
